--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div id="upsidedown-info">
                         <!-- city name, temp, and weather icon -->
                         <h2 class="big"><span id="upsidedown-city-name">City name</span></h2>
-                        <h2 id="upsidedown-temp" class="big"><span id="utemp">40</span><span id="degrees">°C</span></h2>
+                        <h2 id="upsidedown-temp" class="big"><span id="utemp">40</span><span id="cdegrees">°C</span></h2>
                         <span id="upsidedown-icon" class="big-icon"><i class="fa-solid fa-rainbow"></i>
 
                     </div>
@@ -63,7 +63,7 @@
                     <div class="row" id="name-temp">
                         <!-- city name, temp, and weather icon -->
                         <h2  class="big" id="city-name">City name</h2>
-                        <h2 class="big"><span id="temp">40</span><span id="degrees">°C</span></h2>
+                        <h2 class="big"><span id="temp">40</span><span id="degrees">°C</span id="bar"><span> | </span><span id="fdegrees">°F</span></h2>
                     </div>
                     <div class="icon-area">
                         <span id="icon" class="big-icon"><i class="fa-solid fa-rainbow"></i>
@@ -100,10 +100,12 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <!-- copyright and socials-->
-            <p>copyright and socials</p>
-        </footer>
+        <div class="footer">
+            <a
+            href="https://github.com/wecodeschool/vanilla-weather-app"
+            target="_blank"
+            >Open-source code</a> by Isabel Klint.
+        </div>
     </div>
     <script src="src/index.js"></script>
 </body>
