added title and font

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <!-- GOOGLE FONTS NEEDED MAYBE  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!--<link
-      href="https://fonts.googleapis.com/css2?family=XXX&display=swap"
-      rel="stylesheet"
-    /> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jaldi&display=swap"
+      rel="stylesheet"/>
     <!-- AXIOS -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -24,11 +23,16 @@
 </head>
 <body>
     <div class="container">
+        <div class="row">
+            <div class="headline1" style="font-family: Jaldi">
+                ANTIPODAL WEATHER SERVICE
+            </div>
+        </div>
         <div class="row" id="search-area">
             <div class="col"></div>
             <div class="col">
                 <div class="box">
-                    <div class="headline">Find the weather in...</div>
+                    <div class="headline2">Find the weather in...</div>
                     <div>
                         <input class="form" id="searchbar" type="text" placeholder="Enter a city name..."/>
                         <input class="button"  value="•" id="citysearchbutton"></input>
