--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row" id="antipode-area">
             <div class="headline1" style="font-family: Jaldi">
-                ANTIPODAL WEATHER SERVICE
+                <p>ANTIPODAL WEATHER SERVICE</p>
+                <p class="smaller">Try entering 'Brisbane' in the city search box.</p>
             </div>
         </div>
         <div class="row" id="search-area">
@@ -104,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
+        <div class="smaller">
             <a
             href="https://github.com/wecodeschool/vanilla-weather-app"
             target="_blank"
