added button labels

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="row" id="antipode-area">
-            <div class="headline1" style="font-family: Jaldi">
+        <div class="row">
+            <div class="headline1">
                 <p>ANTIPODAL WEATHER SERVICE</p>
                 <p class="smaller">Try entering 'Brisbane' in the city search box.</p>
             </div>
@@ -36,11 +36,11 @@
                     <div class="headline2">Find the weather in...</div>
                     <div>
                         <input class="form" id="searchbar" type="text" placeholder="Enter a city name..."/>
-                        <input class="button"  value="•" id="citysearchbutton"></input>
+                        <input class="button"  value="•" id="citysearchbutton" aria-label="click to search"></input>
                     </div>
                     <div>
                         <input class="form"id="locationbar" type="text" placeholder="See your location's weather"/>
-                        <input class="button" value="•" id="locationbutton"></input>
+                        <input class="button" value="•" id="locationbutton"  aria-label="click to search"></input>
                     </div>
                 </div>
             </div>
