--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Weather Map</title>
+    <title>Antipode Weather Service</title>
         <!-- FONT AWESOME   -->
         <script src="https://kit.fontawesome.com/6a50e3be5d.js" crossorigin="anonymous"></script>
     <!-- GOOGLE FONTS NEEDED MAYBE  -->
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="headline1">
                 <p>ANTIPODAL WEATHER SERVICE</p>
-                <p class="smaller">Try entering 'Brisbane' in the city search box.</p>
+                <p class="medium">Try entering 'Jakarta' in the city search box.</p>
             </div>
         </div>
         <div class="row" id="search-area">
@@ -98,11 +98,8 @@
                                 <span id="day-time"></span>
                             </div>
                             <div class="weather-row">
-                                <span>Humidity</span>
-                                <span id="humidity"></span>
-                                <span>. Windspeed</span>
-                                <span id="wind"></span>
-                                <span>.</span>
+                                <span>Humidity</span><span id="humidity"></span>.
+                                <span>Windspeed</span><span id="wind"></span>.
                             </div>
                             <div class="weather-row">
                                 <span id="description" style="text-transform: uppercase;">Weather description.</span>
