Add social link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="smaller">
-            <p>Coded by <a href="link">Isabel Klint.</a></p>
+            <p>Coded by <a href="https://www.linkedin.com/in/isabel-klint/">Isabel Klint.</a></p>
             <p><a href="link">Open-sourced on GitHub</a> and <a href="link">hosted on Netlify.</a></p>
         </div>
     </div>
