added Netlify link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="smaller">
             <p>Coded by <a href="https://www.linkedin.com/in/isabel-klint/">Isabel Klint.</a></p>
-            <p><a href="https://isabelklint.github.io/ANTIPODE-WEATHER-SERVICE/">Open-sourced on GitHub</a> and <a href="link">hosted on Netlify.</a></p>
+            <p><a href="https://isabelklint.github.io/ANTIPODE-WEATHER-SERVICE/">Open-sourced on GitHub</a> and <a href="https://sunny-fudge-a596ac.netlify.app">hosted on Netlify.</a></p>
         </div>
     </div>
     <script src="src/index.js"></script>
