Added antipodal cities.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="headline1">
                 <p>ANTIPODAL WEATHER SERVICE</p>
                 <p class="medium">Try entering 'Jakarta' in the city search box.</p>
+                <p class="medium">Other cities to try: Brisbane, Xi'an, or Santiago.</p>
             </div>
         </div>
         <div class="row" id="search-area">
