--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="headline1">
-                <p>ANTIPODAL WEATHER SERVICE</p>
+                <p>ANTIPODE WEATHER SERVICE</p>
                 <p class="medium">Try entering 'Jakarta' in the city search box.</p>
                 <p class="medium">Also try: Brisbane, Xi'an, or Santiago.</p>
             </div>
