--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="headline1">
                 <p>ANTIPODE WEATHER SERVICE</p>
                 <p class="medium">Try entering 'Jakarta' in the city search box.</p>
-                <p class="medium">Also try: Brisbane, Xi'an, or Santiago.</p>
+                <p class="medium">Also try: La Quiaca, Washer, or Christchurch.</p>
             </div>
         </div>
         <div class="row" id="search-area">
