--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="col" id="middle">
                 <span id="circlearrows">
-                    <img src="images/circlearrows.png" 
+                    <img src="images/circlearrows.svg" 
                     alt="icon shows cities are antipodes"/>
                 </span>
             </div>
