--- a/index.html
+++ b/index.html
@@ -114,14 +114,55 @@
                         <div class="col-8"></div>
                         <div class="col-4">
                             <div class="row">
-                            <div class="col-2 prediction">
-                                <div class="date">Day</div>
-                                <div class="mini-icon">☼</div>
-                                <div class="min-max">
-                                    <span class="min">10•</span><span class="max">10•</span>
+                                <div class="col-2 prediction">
+                                    <div class="date">Day</div>
+                                    <div class="mini-icon">☼</div>
+                                    <div class="min-max">
+                                        <span class="min">10•</span>
+                                        <span class="max">10•</span>
+                                    </div>
                                 </div>
-                            <div>
-                        </div>
+                                <div class="col-2 prediction">
+                                    <div class="date">Day</div>
+                                    <div class="mini-icon">☼</div>
+                                    <div class="min-max">
+                                        <span class="min">10•</span>
+                                        <span class="max">10•</span>
+                                    </div>
+                                </div>
+                                <div class="col-2 prediction">
+                                    <div class="date">Day</div>
+                                    <div class="mini-icon">☼</div>
+                                    <div class="min-max">
+                                        <span class="min">10•</span>
+                                        <span class="max">10•</span>
+                                    </div>
+                                </div>
+                                <div class="col-2 prediction">
+                                    <div class="date">Day</div>
+                                    <div class="mini-icon">☼</div>
+                                    <div class="min-max">
+                                        <span class="min">10•</span>
+                                        <span class="max">10•</span>
+                                    </div>
+                                </div>
+                                <div class="col-2 prediction">
+                                    <div class="date">Day</div>
+                                    <div class="mini-icon">☼</div>
+                                    <div class="min-max">
+                                        <span class="min">10•</span>
+                                        <span class="max">10•</span>
+                                    </div>
+                                </div>
+                                <div class="col-2 prediction">
+                                    <div class="date">Day</div>
+                                    <div class="mini-icon">☼</div>
+                                    <div class="min-max">
+                                        <span class="min">10•</span>
+                                        <span class="max">10•</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div> 
                 </div>
