fix form and buttons

--- a/index.html
+++ b/index.html
@@ -34,14 +34,38 @@
             <div class="col">
                 <div class="box">
                     <div class="headline2">Find the weather in...</div>
-                    <div>
-                        <input class="form" id="searchbar" type="text" placeholder="Enter a city name..."/>
-                        <input class="button"  value="•" id="citysearchbutton" aria-label="click to search"></input>
-                    </div>
-                    <div>
-                        <input class="form"id="locationbar" type="text" placeholder="See your location's weather"/>
-                        <input class="button" value="•" id="locationbutton"  aria-label="click to search"></input>
-                    </div>
+                    <!-- start -->
+                        <form>
+                            <div>
+                                <input class="city_search_area" id="searchbar" type="text" 
+                                placeholder="Enter a city name..."/>
+                                <button id="citysearchbutton" class="button"
+                                aria-label="click to search">•</button>
+                            </div>
+                            <div>
+                                <input class="form" id="locationbar" type="text" 
+                                placeholder="See your location's weather"/>
+                                <button class="button" id="locationbutton"  
+                                aria-label="click to search">•</button>
+                            </div>
+                        </form>
+                    <!-- end -->
+                    <!--
+                    <form>
+                        <div>
+                            <input class="form" id="searchbar" type="text" 
+                            placeholder="Enter a city name..."/>
+                            <input class="button"  value="•" id="citysearchbutton" 
+                            aria-label="click to search"></input>
+                        </div>
+                        <div>
+                            <input class="form"id="locationbar" type="text" 
+                            placeholder="See your location's weather"/>
+                            <input class="button" value="•" id="locationbutton"  
+                            aria-label="click to search"></input>
+                        </div>
+                    </form>
+                    -->
                 </div>
             </div>
         </div>
@@ -122,46 +146,7 @@
                                         <span class="max">10•</span>
                                     </div>
                                 </div>
-                                <div class="col-2 prediction">
-                                    <div class="date">Day</div>
-                                    <div class="mini-icon">☼</div>
-                                    <div class="min-max">
-                                        <span class="min">10•</span>
-                                        <span class="max">10•</span>
-                                    </div>
-                                </div>
-                                <div class="col-2 prediction">
-                                    <div class="date">Day</div>
-                                    <div class="mini-icon">☼</div>
-                                    <div class="min-max">
-                                        <span class="min">10•</span>
-                                        <span class="max">10•</span>
-                                    </div>
-                                </div>
-                                <div class="col-2 prediction">
-                                    <div class="date">Day</div>
-                                    <div class="mini-icon">☼</div>
-                                    <div class="min-max">
-                                        <span class="min">10•</span>
-                                        <span class="max">10•</span>
-                                    </div>
-                                </div>
-                                <div class="col-2 prediction">
-                                    <div class="date">Day</div>
-                                    <div class="mini-icon">☼</div>
-                                    <div class="min-max">
-                                        <span class="min">10•</span>
-                                        <span class="max">10•</span>
-                                    </div>
-                                </div>
-                                <div class="col-2 prediction">
-                                    <div class="date">Day</div>
-                                    <div class="mini-icon">☼</div>
-                                    <div class="min-max">
-                                        <span class="min">10•</span>
-                                        <span class="max">10•</span>
-                                    </div>
-                                </div>
+
                             </div>
                         </div>
                     </div> 
