make locationbar disabled

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </div>
                             <div>
                                 <input class="form" id="locationbar" type="text" 
-                                placeholder="See your location's weather"/>
+                                placeholder="See your location's weather" disabled/>
                                 <button class="button" id="locationbutton"  
                                 aria-label="click to search">•</button>
                             </div>
