working on forecast js

--- a/index.html
+++ b/index.html
@@ -117,20 +117,10 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="row" id="last-five-days">
+                    <div class="row">
                         <div class="col-8"></div>
-                        <div class="col-4">
-                            <div class="row">
-                                <div class="col-2 prediction">
-                                    <div class="date">Day</div>
-                                    <div class="mini-icon">☼</div>
-                                    <div class="min-max">
-                                        <span class="min">10•</span>
-                                        <span class="max">10•</span>
-                                    </div>
-                                </div>
-
-                            </div>
+                        <div class="col-4" id="last-five-days">
+                            <!-- weather predictions go here-->
                         </div>
                     </div> 
                 </div>
