Prettier weather info

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                                     <span id="day-time"></span>
                                 </div>
                                 <div class="weather-row">
-                                    <span>Humidity</span><span id="humidity"></span>.
-                                    <span>Windspeed</span><span id="wind"></span>.
+                                    <span></span><span id="humidity"></span>
+                                    <span></span><span id="wind"></span>
                                 </div>
                                 <div class="weather-row">
-                                    <span id="description" style="text-transform: uppercase;">Weather description.</span>
+                                    <span id="description" style="text-transform: capitalize;"></span>
                                 </div>
                             </div>
                         </div>
