--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     <!-- start -->
                         <form>
                             <div>
-                                <input class="city_search_area" id="searchbar" type="text" 
+                                <input class="city_search_area insidebox" id="searchbar" type="text" 
                                 placeholder="Enter a city name..."/>
                                 <button id="citysearchbutton" class="button"
                                 aria-label="click to search">•</button>
                             </div>
                             <div>
-                                <input class="form" id="locationbar" type="text" 
+                                <input class="form insidebox" id="locationbar" type="text" 
                                 placeholder="See your location's weather" disabled/>
                                 <button class="button" id="locationbutton"  
                                 aria-label="click to search">•</button>
